# rtmilk

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml
src/rtm/: __init__.py  api.py  authorization.py  list.py  models.py  task_series.py  tasks.py  utils.py
src/rtmilk/: __init__.py  _properties.py  _sansio.py  _secrets.py  _utils.py  api.py  api_async.py  api_base.py  api_sync.py  authorization.py  client.py  filter.py  mirror.py  models.py  properties.py  sansio.py  secrets.py  storage.py  utils.py
tests/: conftest.py  generate_credentials.py  test_api_wrapper.py  test_client.py  test_filter.py  test_list.py  test_mirror.py  test_models.py  test_task.py
