[tool.poetry]
name = "rtmilk"
version = "1.0.1"
description = "RTM API wrapper"
authors = ["Rehan Khwaja <rehan@khwaja.name>"]
license = "MIT"
homepage = "https://github.com/rkhwaja/rtmilk"
keywords = ["RememberTheMilk"]
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
requests = ">=2.23.0"
urllib3 = [
	{ version = ">=1.26", python = ">=3.10,<4" }
]
pydantic = ">=2.4.2"
aiohttp = ">=3.9"
listdiff = ">=1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1"
pyperclip = ">=1.8.0"
python-dateutil = ">=2.8.1"
python-dotenv = ">=0.17.1"
pytest-cov = ">=3"
pytest-asyncio = ">=0.16.0"
poethepoet = ">=0.16.4"
ruff = ">=0.0.289"

[tool.poe.tasks]
build = "poetry build --no-interaction"
test = "pytest"
lint = "ruff src tests"

[tool.poe.tasks.test-with-coverage]
shell = """
pytest --cov=src || exit 1
coverage xml
"""

[tool.ruff]
line-length = 1000
ignore = ["A002", "A003", "ANN", "COM812", "D", "DTZ", "EM", "ERA001", "FBT001", "FBT003", "FIX", "G004", "N802", "I", "N803", "N806", "N815", "PLR0913", "PT013", "PTH", "S101", "S311", "T20", "TCH", "TD", "TRY003", "W191"]
select = ["ALL"]
target-version = "py39"

[tool.ruff.extend-per-file-ignores]
"tests/*" = ["ANN201", "D103", "INP001", "PT006"]
"_properties.py" = ["SLF001"]
"client.py" = ["SLF001"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry_core>=1.1"]
build-backend = "poetry.core.masonry.api"
