[project]
name = "rtmilk"
version = "3.0.1"
description = "Remember The Milk API wrapper"
maintainers = [
	{ name = "Rehan Khwaja", email = "rehan@khwaja.name" }
]
keywords = ["RememberTheMilk", "Remember", "Milk"]
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.23.0",
    "urllib3>=1.26; python_version>='3.10'",
    "pydantic>=2.4.2",
    "aiohttp>=3.9",
    "listdiff>=1.0.2",
]

[project.urls]
Homepage = "https://github.com/rkhwaja/rtmilk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
build = "uv build"
test = "pytest"
lint = "ruff check src tests"

[tool.poe.tasks.test-with-coverage]
shell = """
pytest --cov=src || exit 1
coverage xml
"""

[tool.ruff]
line-length = 1000
lint.ignore = ["A002", "A003", "ANN", "COM812", "D", "DTZ", "EM", "ERA001", "FBT001", "FBT003", "FIX", "G004", "N802", "I", "N803", "N806", "N815", "PLR0913", "PT013", "PTH", "S101", "S311", "T20", "TCH", "TD", "TRY003", "W191"]
lint.select = ["ALL"]
target-version = "py39"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F403"]
"tests/*" = ["ANN201", "D103", "INP001", "PT006"]
"_properties.py" = ["SLF001"]
"client.py" = ["SLF001"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
dev-dependencies = [
    "pytest>=7.1",
    "pyperclip>=1.8.0",
    "python-dateutil>=2.8.1",
    "python-dotenv>=0.17.1",
    "pytest-cov>=3",
    "pytest-asyncio>=0.24.0",
    "poethepoet>=0.16.4",
    "ruff>=0.6.3",
]
